# sony-jpgcookbook

./: GEMINI.md  README.md  build.gradle  check_syntax.py
.github/: FUNDING.yml
.github/workflows/: build.yml
app/: BootReceiver.java  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  process_kernel.h
app/src/main/java/com/github/ma1co/pmcademo/app/: AdvancedFocusMeterView.java  BundleManager.java  CameraUtil.java  ConnectivityManager.java  DiptychManager.java  DiptychOverlayView.java  Filepaths.java  FocusOverlayView.java  HardwareRecipeApplier.java  HttpServer.java  HudController.java  ImageProcessor.java  InputManager.java  LensCalibrationController.java  LensMath.java  LensProfileManager.java  LutCooker.java  LutEngine.java  MainActivity.java  MatrixManager.java  MenuController.java  MultiExposeManager.java  MultiExposeOverlayView.java  PlaybackController.java  RTLProfile.java  RecipeManager.java  ScalarWebAPIWrapper.java  SonyCameraManager.java  SonyFileScanner.java  WifiActivity.java  WifiDirectActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
lib/: build.gradle
